# firebound-proscenio

./: .editorconfig  .gdlintrc  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  FEATURES.md  LICENSE  README.md  STATUS.md  cspell.json  pyproject.toml  pyrightconfig.json  sonar-project.properties
apps/blender/: README.md  __init__.py  addon_prefs.py  blender_manifest.toml  pyproject.toml
apps/blender/core/: __init__.py  _bpy_compat.py  alpha_contour.py  atlas_packer.py  automesh_density.py  automesh_geometry.py  cp_keys.py  feature_status.py  geometry_2d.py  help_topics.py  hydrate.py  i18n.py  mirror.py  modal_overlay_geometry.py  pg_cp_fallback.py  props_access.py  psd_manifest.py  psd_naming.py  quick_armature_math.py  region.py  report.py  skeleton_target.py  slot_emit.py  sprite_frame_math.py  uv_bounds.py  viewport_state.py
apps/blender/core/_shared/: __init__.py  action_fcurves.py  cp_keys.py  feature_status.py  geometry_2d.py  hydrate.py  json_cp.py  material_images.py  modal_overlay_geometry.py  nearest.py  pg_cp_fallback.py  props_access.py  region.py  report.py  viewport_state.py
apps/blender/core/armature/: __init__.py  driver_expression.py  quick_armature_math.py  skeleton_target.py
apps/blender/core/atlas/: __init__.py  atlas_packer.py  edge_extend.py
apps/blender/core/automesh/: __init__.py  contour.py  cut_geometry.py  density.py  erosion_loops.py  geometry.py  outer_splice.py  stroke_geometry.py
apps/blender/core/bpy_helpers/: __init__.py  atlas_collect.py  atlas_compose.py  atlas_manifest.py  automesh_bmesh.py  modal_overlay.py  preview_icons.py  psd_spritesheet.py  select.py  sprite_frame_shader.py  viewport_math.py
apps/blender/core/psd/: __init__.py  psd_manifest.py  psd_naming.py
apps/blender/core/skinning/: __init__.py  authoring_stages.py  bind_diagnosis.py  bone_modes.py  brush_curve_presets.py  paint_preset_2d.py  planar_proximity.py  sidecar_schema.py  skinning_modes.py  weight_diff.py  weight_reproject.py  weight_snapshot.py  weight_transfer.py
apps/blender/core/slot/: __init__.py  slot_emit.py
apps/blender/core/sprite_frame/: __init__.py
apps/blender/core/spritesheet/: __init__.py  spritesheet_math.py
apps/blender/core/validation/: __init__.py  _shared.py  active_element.py  active_slot.py  active_sprite.py  export.py  issue.py
apps/blender/exporters/godot/: __init__.py
apps/blender/importers/: __init__.py
apps/blender/importers/photoshop/: __init__.py  armature.py  planes.py
apps/blender/operators/: __init__.py  _status_bar.py  authoring_camera.py  authoring_ik.py  automesh.py  automesh_authoring.py  bind_mesh.py  brush_preset.py  copy_weights_to_selected.py  driver.py  edit_weights.py  export_flow.py  help_dispatch.py  import_photoshop.py  pose_library.py  quick_armature.py  restore_weight_snapshot.py  selection.py  set_bone_mode.py  sidecar_io.py  skeleton_target.py  uv_authoring.py
apps/blender/operators/armature/: __init__.py  _overlay.py  _status_bar.py  authoring_camera.py  authoring_ik.py  quick_armature.py  skeleton_target.py
apps/blender/operators/atlas_pack/: __init__.py  _paths.py  apply.py  pack.py  unpack.py
apps/blender/operators/automesh/: __init__.py  _status_bar.py  automesh.py  automesh_authoring.py
apps/blender/operators/skinning/: __init__.py  bind_mesh.py  brush_preset.py  copy_weights_to_selected.py  edit_weights.py  restore_weight_snapshot.py  set_bone_mode.py  sidecar_io.py
apps/blender/operators/slot/: __init__.py  attachment.py  create.py  preview_shader.py  select.py
apps/blender/panels/: __init__.py  _draw_driver_shortcut.py  _draw_mesh.py  _draw_polygon.py  _draw_region.py  _draw_sprite.py  _draw_sprite_frame.py  _helpers.py  active_element.py  active_slot.py  active_sprite.py  animation.py  atlas.py  diagnostics.py  element.py  export.py  help.py  helpers.py  mesh_generation.py  outliner.py  pipeline.py  skeleton.py  skinning.py  slots.py  validation.py  weight_paint.py
apps/blender/properties/: __init__.py  _dynamic_items.py  _handlers.py  object_props.py  scene_props.py  validation_issue.py
apps/blender/tests/: run_coverage.py  run_operator_tests.py  run_tests.py
apps/blender/tests/operators/: conftest.py  test_appearance_export.py  test_atlas_exclude.py  test_atlas_unpack_rescue.py  test_automesh_authoring.py  test_automesh_regen.py  test_bind_mesh.py  test_brush_presets.py  test_create_slot.py  test_driver_shortcut.py  test_edit_weights_modal.py  test_export_bundle.py  test_ik_bake.py  test_keyframe_slot_attachment.py  test_mixed_flow_auto_snapshot.py  (+11 more)
apps/blender/wheels/: .gitignore  README.md  proscenio_models-0.1.0-py3-none-any.whl  pydantic_core-2.46.4-cp311-cp311-macosx_10_12_x86_64.whl  pydantic_core-2.46.4-cp313-cp313-macosx_10_12_x86_64.whl
blender-addon/: __init__.py  blender_manifest.toml  pyproject.toml
blender-addon/core/: __init__.py  atlas_io.py  driver_helpers.py  feature_status.py  help_topics.py  hydrate.py  mirror.py  pg_cp_fallback.py  psd_manifest.py  psd_naming.py  psd_spritesheet.py  region.py  uv_bounds.py  validation.py  viewport_math.py
blender-addon/core/bpy_helpers/: __init__.py  atlas_collect.py  atlas_compose.py  atlas_io.py  atlas_manifest.py  sprite_frame_shader.py  viewport_math.py
blender-addon/core/validation/: __init__.py  active_slot.py  active_sprite.py
blender-addon/exporters/: __init__.py
blender-addon/exporters/godot/: writer.py
blender-addon/importers/photoshop/: __init__.py  armature.py  planes.py
blender-addon/operators/: __init__.py  authoring_camera.py  driver.py  import_photoshop.py  pose_library.py  quick_armature.py  selection.py  uv_authoring.py
blender-addon/operators/atlas_pack/: apply.py  pack.py
blender-addon/operators/slot/: __init__.py  create.py  preview_shader.py
blender-addon/panels/: __init__.py  _draw_polygon.py  active_slot.py  active_sprite.py  atlas.py  diagnostics.py  export.py  help.py  validation.py
blender-addon/properties/: __init__.py  _dynamic_items.py  _handlers.py  scene_props.py  validation_issue.py
blender-addon/tests/: run_tests.py
(+950 files in other folders)
