[project]
name = "proscenio-workspace"
version = "0"
description = "Firebound Proscenio monorepo workspace root. Not a publishable package; declares the uv workspace and aggregates member packages under apps/ and packages/."
requires-python = ">=3.11"

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "apps/blender",
    "packages/codegen",
    "packages/models",
    "packages/validator",
]
exclude = []

[tool.coverage.run]
# Store repo-root-relative file paths in coverage.xml so the report resolves
# against sonar.projectBaseDir. The Docker Sonar scan mounts the repo at
# /usr/src; absolute host paths (E:\...) or per-source-root relative paths
# would not match there and coverage would import as 0%.
relative_files = true
# Parallel data files so the pure-pytest run and the in-Blender runs
# (apps/blender/tests/run_coverage.py) each write a separate .coverage.*
# that `coverage combine` merges into one report. relative_files keeps the
# paths aligned across the two interpreters.
parallel = true
