[project]
name = "proscenio-blender-addon"
version = "0.1.0"
description = "Proscenio Blender addon — dev tooling configuration. The addon itself is packaged by `blender --command extension build`, not by pip."
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.13",
    "check-jsonschema>=0.29",
    "pytest>=8",
    "pre-commit>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF", "SIM"]
ignore = [
    # Blender operator/panel class names follow PROSCENIO_OT_foo / PROSCENIO_PT_foo
    # conventions, which violate stock PEP-8 naming rules.
    "N801",
    "N802",
    "N803",
    "N815",
    # The addon directory is `blender-addon/` (hyphen) by Blender Extensions
    # repo convention; it is never imported as a top-level Python package.
    "N999",
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_unreachable = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "."
files = ["exporters", "operators", "panels", "properties", "core", "importers", "tests"]
# `tests/fixtures/` holds frozen JSON, not Python.
# `scripts/` (under repo root, not blender-addon/) holds one-off debug
# helpers that print bpy hierarchies; typing them strictly is not worth
# the cost — they re-run from scratch each Blender invocation.
exclude = ["tests/fixtures"]
# bpy.types.* resolve to Any (no stubs); allow subclassing them.
disallow_subclassing_any = false
# Blender's bpy / mathutils have no published stubs we want to bind to —
# fake-bpy-module exists but pinning to it is fragile across Blender releases.
# Treat them as Any-typed at the import boundary.
[[tool.mypy.overrides]]
module = ["bpy", "bpy.*", "bpy_extras.*", "mathutils", "mathutils.*"]
ignore_missing_imports = true
follow_imports = "skip"
