[project]
name = "proscenio-blender-addon"
version = "0.1.0"
description = "Proscenio Blender addon — dev tooling configuration. The addon itself is packaged by `blender --command extension build`, not by pip."
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.13",
    "check-jsonschema>=0.29",
    "pytest>=8",
    "pre-commit>=4.0",
    "pillow>=10.0",
    # fake-bpy-module ships PEP 561 stub-only packages for bpy / bmesh /
    # mathutils / gpu / blf so mypy can resolve the Blender API at the
    # dev-environment boundary. Pinned to a snapshot newer than the
    # Blender LTS the addon targets; bump when a new LTS lands.
    "fake-bpy-module-latest>=20260501",
    # `proscenio-models` (workspace) + `numpy` are Blender-runtime deps
    # that the addon imports at execution time inside Blender's bundled
    # Python. They are not packaged with the extension build; they live in
    # the dev group so the host environment can type-check and pytest the
    # addon without launching Blender.
    "proscenio-models",
    "numpy>=2.0",
]

[tool.uv.sources]
proscenio-models = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF", "SIM"]
ignore = [
    # Blender operator/panel class names follow PROSCENIO_OT_foo / PROSCENIO_PT_foo
    # conventions, which violate stock PEP-8 naming rules.
    "N801",
    "N802",
    "N803",
    "N815",
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
# Blender 5.x ships Python 3.13. fake-bpy stubs use 3.12+ type-parameter
# list syntax, so the type-check target must be >= 3.12 even though the
# `requires-python` floor stays at 3.11 for tooling compatibility.
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_unreachable = true
warn_return_any = true
extra_checks = true
strict_equality = true
disallow_any_explicit = true
disallow_any_decorated = true
disallow_any_unimported = true
disallow_subclassing_any = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "."
files = ["exporters", "operators", "panels", "properties", "core", "importers", "tests"]
# `tests/fixtures/` holds frozen JSON, not Python.
# `tests/operators/` is the weight-paint productivity follow-up headless operator pytest layer:
# runs INSIDE Blender's bundled Python (which has pytest installed),
# uses pytest fixtures (untyped by convention), and asserts via bpy
# state. mypy strict on the host environment trips on the missing
# pytest stub + the deliberately-untyped test signatures. Excluded
# here; correctness comes from running the tests against Blender.
exclude = ["tests/fixtures", "tests/operators", "tests/run_operator_tests.py"]

# Tier-2 paths: deep bpy-bound surface that still carries `dict[str, Any]`
# payload bags + bare `import bpy` inside function bodies + fake-bpy stub
# limitations (collections marked non-iterable, MeshVertices not indexable,
# bpy_prop_array missing __getitem__). Cleaned module-by-module via the
# "bpy stub sweep" backlog entry. mypy still parses these for syntax /
# import-cycle errors but ignores type errors so the boundary modules
# (writer, importers, non-bpy_helpers core, tests) gate at full strict.
[[tool.mypy.overrides]]
module = [
    "core.bpy_helpers.*",
    "operators.*",
    "panels.*",
    "properties.*",
]
ignore_errors = true

# Tier-1-pending paths: cleaned module-by-module as the model-first
# migration lands. Each module exits the override when its pydantic
# conversion + Protocol typing + bpy stub narrowing pass mypy strict-strict.
# Entry order tracks the migration item it gets cleaned with:
#   - core.psd_manifest, importers.photoshop.* -> "PSD manifest reader" item
#   - core.validation.*, core.report, core.mirror, core.hydrate,
#     core.props_access, core.skeleton_target -> "tier-1 sweep" item
#   - tests.run_tests -> swept with the tier-1 cleanup
[[tool.mypy.overrides]]
module = [
    "core.report",
    "core.mirror",
    "core.hydrate",
    "core.props_access",
    "core.skeleton_target",
    "core.validation.*",
    "tests.run_tests",
]
ignore_errors = true
